# digitize

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/digitize/: __init__.py  cli.py  client.py  config.py  converter.py  detector.py  extractor.py  index.py  models.py  parsing.py  pdf_qa.py  verify.py
src/digitize/prompts/: detect.py  extract.py
src/digitize/prompts/disciplines/: civil.py  electrical.py  instrumentation.py  mechanical.py
tests/: conftest.py  test_config.py  test_models.py  test_parsing.py
