[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitize"
version = "0.1.0"
description = "Multi-discipline engineering drawing extraction CLI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-recording>=0.13",
]

[project.scripts]
digitize = "digitize.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/digitize"]

[tool.hatch.build.targets.sdist]
include = ["src/digitize"]
